--- a/calico/operations/ebpf/install.mdx
+++ b/calico/operations/ebpf/install.mdx
@@ -137,7 +137,7 @@ kubeadm init --skip-phases=addon/kube-proxy
 requirements, `kops`-provisioned clusters are supported.
 
 Since `kube-proxy` is not required in eBPF mode, you may wish to disable `kube-proxy` at install time. With `kops` you
-can do that by setting the follwing in your `kops` configuration:
+can do that by setting the following in your `kops` configuration:
 
 ```yaml
 kubeProxy:
@@ -290,7 +290,7 @@ When the main install guide tells you to apply the `custom-resources.yaml`, typi
 the URL of the file directly, you should instead download the file, so that you can edit it:
 
 ```bash
-curl -o custom-resources.yaml <url of the file from the main install guide>
+curl -o custom-resources.yaml {{site.data.versions.first.manifests_url}}/manifests/custom-resources.yaml
 ```
 
 Edit the file in your editor of choice and find the `Installation` resource, which should be at the top of the file.
@@ -300,9 +300,9 @@ as shown below.
 
 For example:
 
-```yaml
-# This section includes base Calico Enterprise installation configuration.
-# For more information, see: https://docs.tigera.io/calico/latest/reference/installation/api/#operator.tigera.io/v1
+```
+# This section includes base {{prodname}} installation configuration.
+
 apiVersion: operator.tigera.io/v1
 kind: Installation
 metadata:
@@ -315,10 +315,16 @@ spec:
    # EKS with Bottlerocket as node image only:
    # flexVolumePath: /var/lib/kubelet/plugins
 
-   # Install Calico Enterprise
-  variant: TigeraSecureEnterprise
+   # Install Calico Open Source
+   variant: Calico
 
-  # ... remainder of the Installation resource varies by platform ...
+# This section configures the Calico API server.
+
+apiVersion: operator.tigera.io/v1
+kind: APIServer 
+metadata: 
+  name: default 
+spec: {}  
 ```
 
 Then apply the edited file:
@@ -400,7 +406,7 @@ the Felix configuration parameter `bpfKubeProxyIptablesCleanupEnabled` to false.
 `kubectl` as follows:
 
 ```bash
-kubectl patch felixconfiguration.p default --type merge --patch='{"spec": {"bpfKubeProxyIptablesCleanupEnabled": false}}'
+kubectl patch felixconfiguration default --type merge --patch='{"spec": {"bpfKubeProxyIptablesCleanupEnabled": false}}'
 ```
 
 </TabItem>
