--- a/calico-enterprise_versioned_docs/version-3.15/threat/web-application-firewall.mdx
+++ b/calico-enterprise_versioned_docs/version-3.15/threat/web-application-firewall.mdx
@@ -55,12 +55,19 @@ With {{prodname}} WAF, you gain visibility into internal east/west traffic at th
 
 :::caution
 
-Enabling WAF for certain system services may result in an undesired cluster state. Do not enable WAF for system service with the following prefixes:
+Enabling WAF for certain system services may result in an undesired cluster state.
+- Do not enable WAF for system service with the following prefixes:
 
-- `tigera-*`
-- `calico-*`
-- `kube-system`
-- `openshift-*`
+  - `tigera-*`
+  - `calico-*`
+  - `kube-system`
+  - `openshift-*`
+
+- Do not enable WAF for system services with the following combination of name and namespaces:
+  - name: `kubernetes`, namespace: `default`
+  - name: `openshift`, namespace: `default`
+  - name: `gatekeeper-webhook-service`, namespace: `gatekeeper-system`
+
 :::
 
 **Required**
