Replace  absolute URLs with relative paths

--- a/calico-enterprise_versioned_docs/version-3.15/threat/web-application-firewall.mdx
+++ b/calico-enterprise_versioned_docs/version-3.15/threat/web-application-firewall.mdx
@@ -92,7 +92,7 @@ kubectl patch felixconfiguration default --type='merge' -p '{"spec":{"policySync
 
 #### Step 1: Configure ApplicationLayer CRD
 
-Create or update the [ApplicationLayer](https://docs.tigera.io/reference/installation/api#operator.tigera.io/v1.ApplicationLayer) resource to include the webApplicationFirewall section of the file. Ensure value of the field is set to Enabled.
+Create or update the [ApplicationLayer](../reference/installation/api#operator.tigera.io/v1.ApplicationLayer) resource to include the webApplicationFirewall section of the file. Ensure value of the field is set to Enabled.
 
 Example:
 
