--- a/calico-cloud_versioned_docs/version-3.15/operations/disconnect.mdx
+++ b/calico-cloud_versioned_docs/version-3.15/operations/disconnect.mdx
@@ -41,4 +41,4 @@ To remove policies from tiers, you have these options:
 
 ## Next steps
 
-Continue using your cluster with open-source [Project Calico](https://docs.tigera.io/calico/latest/about).
+Continue using your cluster with open-source [Project Calico](/calico/latest/about).
