--- a/calico-enterprise/getting-started/compatibility.mdx
+++ b/calico-enterprise/getting-started/compatibility.mdx
@@ -37,39 +37,18 @@ Note that all Windows feature limitations are described in [Windows limitations]
 
 Kubernetes version support aligns with [upstream Kubernetes](#kubernetes-kubeadm) to the latest version if available.
 
-| {{prodname}} version | {{prodname}} support                                                                     |
-| -------------------- | ---------------------------------------------------------------------------------------- |
-| 3.16                 | - {{prodname}} CNI with network policy<br />- Azure CNI with {{prodname}} network policy |
-| 3.15                 | - {{prodname}} CNI with network policy<br />- Azure CNI with {{prodname}} network policy |
-| 3.14                 | - {{prodname}} CNI with network policy<br />- Azure CNI with {{prodname}} network policy |
-| 3.13                 | Azure CNI with {{prodname}} network policy                                               |
-| 3.12                 | Azure CNI with {{prodname}} network policy                                               |
-| 3.11                 | Azure CNI with {{prodname}} network policy                                               |
-| 3.10                 | Azure CNI with {{prodname}} network policy                                               |
-| 3.9                  | Azure CNI with {{prodname}} network policy                                               |
-| 3.8                  | Azure CNI with {{prodname}} network policy                                               |
-| 3.7                  | Azure CNI with {{prodname}} network policy                                               |
-| 3.6                  | Azure CNI with {{prodname}} network policy                                               |
-| 3.5                  | Azure CNI with {{prodname}} network policy                                               |
+| {{prodname}} version | {{prodname}} support                                         |
+| ---------------------------- | ------------------------------------------------------------ |
+| 3.14 through current release | - {{prodname}} CNI with network policy<br />- Azure CNI with {{prodname}} network policy |
+| 3.13 through current release | Azure CNI with {{prodname}} network policy                   |
 
 ## EKS
 
 Kubernetes version support aligns with [upstream Kubernetes](#kubernetes-kubeadm) to the latest version if available.
 
-| {{prodname}} version | {{prodname}} support                                                                   |
-| -------------------- | -------------------------------------------------------------------------------------- |
-| 3.16                 | - {{prodname}} CNI with network policy<br />- AWS CNI with {{prodname}} network policy |
-| 3.15                 | - {{prodname}} CNI with network policy<br />- AWS CNI with {{prodname}} network policy |
-| 3.14                 | - {{prodname}} CNI with network policy<br />- AWS CNI with {{prodname}} network policy |
-| 3.13                 | - {{prodname}} CNI with network policy<br />- AWS CNI with {{prodname}} network policy |
-| 3.12                 | - {{prodname}} CNI with network policy<br />- AWS CNI with {{prodname}} network policy |
-| 3.11                 | - {{prodname}} CNI with network policy<br />- AWS CNI with {{prodname}} network policy |
-| 3.10                 | - {{prodname}} CNI with network policy<br />- AWS CNI with {{prodname}} network policy |
-| 3.9                  | - {{prodname}} CNI with network policy<br />- AWS CNI with {{prodname}} network policy |
-| 3.8                  | - {{prodname}} CNI with network policy<br />- AWS CNI with {{prodname}} network policy |
-| 3.7                  | - {{prodname}} CNI with network policy<br />- AWS CNI with {{prodname}} network policy |
-| 3.6                  | - {{prodname}} CNI with network policy<br />- AWS CNI with {{prodname}} network policy |
-| 3.5                  | - {{prodname}} CNI with network policy<br />- AWS CNI with {{prodname}} network policy |
+| {{prodname}} version   | {{prodname}} support                                         |
+| ---------------------- | ------------------------------------------------------------ |
+| 3.5 through current release | - {{prodname}} CNI with network policy<br />- AWS CNI with {{prodname}} network policy |
 
 ## GKE
 
@@ -77,23 +56,13 @@ Kubernetes version support aligns with [upstream Kubernetes](#kubernetes-kubeadm
 
 | {{prodname}} version | {{prodname}} support                       |
 | -------------------- | ------------------------------------------ |
-| 3.16                 | - GKE CNI with {{prodname}} network policy |
-| 3.15                 | - GKE CNI with {{prodname}} network policy |
-| 3.14                 | - GKE CNI with {{prodname}} network policy |
-| 3.13                 | - GKE CNI with {{prodname}} network policy |
-| 3.12                 | - GKE CNI with {{prodname}} network policy |
-| 3.11                 | - GKE CNI with {{prodname}} network policy |
-| 3.10                 | - GKE CNI with {{prodname}} network policy |
-| 3.9                  | - GKE CNI with {{prodname}} network policy |
-| 3.8                  | - GKE CNI with {{prodname}} network policy |
-| 3.7                  | - GKE CNI with {{prodname}} network policy |
-| 3.6                  | - GKE CNI with {{prodname}} network policy |
-| 3.5                  | - GKE CNI with {{prodname}} network policy |
+| 3.5 through current release                  | - GKE CNI with {{prodname}} network policy |
 
 ## kOps on AWS
 
 | {{prodname}} version | kOps and Kubernetes versions | {{prodname}} support                                         |
 | -------------------- | ---------------------------- | ------------------------------------------------------------ |
+| 3.17                 | 1.25 - 1.26                  | - {{prodname}} CNI with network policy<br />- AWS CNI with {{prodname}} network policy |
 | 3.16                 | 1.24 - 1.25                  | - {{prodname}} CNI with network policy<br />- AWS CNI with {{prodname}} network policy |
 | 3.15                 | 1.23 - 1.25                  | - {{prodname}} CNI with network policy<br />- AWS CNI with {{prodname}} network policy |
 | 3.14                 | 1.21 - 1.23                  | - {{prodname}} CNI with network policy<br />- AWS CNI with {{prodname}} network policy |
@@ -101,15 +70,13 @@ Kubernetes version support aligns with [upstream Kubernetes](#kubernetes-kubeadm
 | 3.12                 | 1.21, 1.22                   | - {{prodname}} CNI with network policy<br />- AWS CNI with{{prodname}} network policy |
 | 3.11                 | 1.20, 1.21                   | - {{prodname}} CNI with network policy<br />- AWS CNI with {{prodname}} network policy |
 | 3.10                 | 1.19, 1.20                   | - {{prodname}} CNI with network policy<br />- AWS CNI with {{prodname}} network policy |
-| 3.9                  | 1.20                         | - {{prodname}} CNI with network policy<br />- AWS CNI with{{prodname}} network policy |
-| 3.8                  | 1.20                         | - {{prodname}} CNI with network policy<br />- AWS CNI with {{prodname}} network policy |
-| 3.7                  | 1.20                         | - {{prodname}} CNI with network policy<br />- AWS CNI with {{prodname}} network policy |
-| 3.6                  | 1.19                         | - {{prodname}} CNI with network policy<br />- AWS CNI with {{prodname}} network policy |
+| 3.6 - 3.9            | 1.20                         | - {{prodname}} CNI with network policy<br />- AWS CNI with{{prodname}} network policy |
 
 ## Kubernetes-kubeadm
 
 | {{prodname}} version | Kubernetes/kubeadm versions | {{prodname}} support                 |
 | -------------------- | --------------------------- | ------------------------------------ |
+| 3.17                 | 1.25 - 1.27                 | {{prodname}} CNI with network policy |
 | 3.16                 | 1.24 - 1.26                 | {{prodname}} CNI with network policy |
 | 3.15                 | 1.23 - 1.25                 | {{prodname}} CNI with network policy |
 | 3.14                 | 1.21 - 1.23                 | {{prodname}} CNI with network policy |
@@ -127,6 +94,7 @@ Kubernetes version support aligns with [upstream Kubernetes](#kubernetes-kubeadm
 
 | {{prodname}} version | MKE version                          | {{prodname}} support                 | Kubernetes versions |
 | -------------------- | ------------------------------------ | ------------------------------------ | ------------------- |
+| 3.17                 | MKE 3.6                              | {{prodname}} CNI with network policy | 1.24                |
 | 3.16                 | MKE 3.6                              | {{prodname}} CNI with network policy | 1.24                |
 | 3.15                 | MKE 3.6                              | {{prodname}} CNI with network policy | 1.24                |
 | 3.14                 | MKE 3.5                              | {{prodname}} CNI with network policy | 1.21                |
@@ -144,7 +112,8 @@ Kubernetes version support aligns with [upstream Kubernetes](#kubernetes-kubeadm
 
 | {{prodname}} version | OpenShift versions for Kubernetes | {{prodname}} support                 |
 | -------------------- | --------------------------------- | ------------------------------------ |
-| 3.16                 | 4.10 - 4.12                        | {{prodname}} CNI with network policy |
+| 3.17                 | 4.12 - 4.13                       | {{prodname}} CNI with network policy |
+| 3.16                 | 4.10 - 4.12                       | {{prodname}} CNI with network policy |
 | 3.15                 | 4.9 - 4.11                        | {{prodname}} CNI with network policy |
 | 3.14                 | 4.8 - 4.10                        | {{prodname}} CNI with network policy |
 | 3.13                 | 4.8 - 4.10                        | {{prodname}} CNI with network policy |
@@ -161,6 +130,7 @@ Kubernetes version support aligns with [upstream Kubernetes](#kubernetes-kubeadm
 
 | {{prodname}} version | RKE version | {{prodname}} support                 | Kubernetes versions |
 | -------------------- | ----------- | ------------------------------------ | ------------------- |
+| 3.17                 | 1.4         | {{prodname}} CNI with network policy | 1.25                |
 | 3.16                 | 1.4         | {{prodname}} CNI with network policy | 1.23                |
 | 3.15                 | 1.3         | {{prodname}} CNI with network policy | 1.23                |
 | 3.14                 | 1.3         | {{prodname}} CNI with network policy | 1.22                |
@@ -178,6 +148,7 @@ Kubernetes version support aligns with [upstream Kubernetes](#kubernetes-kubeadm
 
 | {{prodname}} version | {{prodname}} support                 | Kubernetes versions |
 | -------------------- | ------------------------------------ | ------------------- |
+| 3.17                 | {{prodname}} CNI with network policy | 1.25 - 1.26         |
 | 3.16                 | {{prodname}} CNI with network policy | 1.24 - 1.25         |
 | 3.15                 | {{prodname}} CNI with network policy | 1.24                |
 | 3.14                 | {{prodname}} CNI with network policy | 1.22                |
@@ -186,6 +157,7 @@ Kubernetes version support aligns with [upstream Kubernetes](#kubernetes-kubeadm
 
 | {{prodname}} version | TKG version | {{prodname}} support                 | Kubernetes versions    |
 | -------------------- | ----------- | ------------------------------------ | ---------------------- |
+| 3.17                 | 1.6         | {{prodname}} CNI with network policy | 1.23                   |
 | 3.16                 | 1.6         | {{prodname}} CNI with network policy | 1.23                   |
 | 3.15                 | 1.5         | {{prodname}} CNI with network policy | 1.22                   |
 | 3.14                 | 1.5         | {{prodname}} CNI with network policy | 1.21                   |
