--- a/calico-cloud_versioned_docs/version-3.16/release-notes/index.mdx
+++ b/calico-cloud_versioned_docs/version-3.16/release-notes/index.mdx
@@ -170,7 +170,7 @@ We've made it easier for platform operators to share Image Assurance scan result
 - Export one row per image or one row per image and CVE.
 - Export CSV or JSON files.
 
-To get started see, [Image Assurance](../image-assurance/scan-image-registries.mdx).
+To get started see, [Image Assurance](../image-assurance).
 
 ### Malware detection is GA
 
@@ -265,4 +265,4 @@ The {{prodname}} installation process will now require running a `kubectl apply`
 
 {{prodname}} introduces Image Assurance in tech preview, enabling DevOps and platform teams to scan images in public and private registries, and images that are automatically discovered in connected clusters. Image Assurance provides a runtime view into risk, based on discovered vulnerabilities. It also offers admission controller policies to enforce how vulnerable images are used to create resources within Kubernetes.
 
-To get started see, [Image Assurance](../image-assurance/scan-image-registries.mdx).
+To get started see, [Image Assurance](../image-assurance).
